# lab2-ailia528

task4/: makefile
task5/: CMakeLists.txt
